--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="cursor">
     <div class="cursorBlur"></div>
     </div>
-    <video autoplay loop muted src="https://player.vimeo.com/external/594136004.sd.mp4?s=fad4ef99ef2e9f4dc7e207a8b2f04cbffc474065&profile_id=164&oauth2_token_id=57447761"></video>
+    <video autoplay loop muted src="https://cdn.pixabay.com/video/2020/07/24/45457-443244028_large.mp4"></video>
     <div class="main">
 
         <div class="page1">
